fix: missing overview option on mobile

--- a/app/webpacker/styles/_subnav.scss
+++ b/app/webpacker/styles/_subnav.scss
@@ -78,7 +78,7 @@ border-bottom-color: currentColor;
 
 
 .app-subnav__section {
-  margin: 0 0 govuk-spacing(4);
+  margin: govuk-spacing(2) 0 govuk-spacing(4);
   padding: 0;
   list-style-type: none;
 }
@@ -136,6 +136,8 @@ border-bottom-color: currentColor;
   padding: govuk-spacing(2) govuk-spacing(3) govuk-spacing(0) 0;
   font-size: govuk-px-to-rem(19px);
   font-weight: bold;
+  display: inline-block;
+
   &:first-of-type {
 
     padding-top: 0;
